Fixed tooltip causing overflow

--- a/src/style/tooltip.scss
+++ b/src/style/tooltip.scss
@@ -13,7 +13,7 @@
         margin-bottom: .5em;
         left: 50%;
         transform: translateX(-50%);
-        max-width: 200%;
+        max-width: 95vw;
         text-overflow: ellipsis;
         transition: opacity .2s ease-in-out, bottom .5s ease-in-out;
         overflow: hidden;
